# Aether-GameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
src/: main.cpp
src/core/: window_context.cpp  window_context.h
src/core/game_managment/objects/: ae_scene.h
src/core/rendering/compiled_shaders/: standard_vertex_shader.spv
src/core/rendering/objects/: vertex.h  vertex.hpp
src/core/rendering/shaders/: standard_shader.frag  standard_shader.vert  triangle.vert
src/core/rendering/vulkan/: memory_manager.cpp  memory_manager.hpp  queue_family_indices.hpp  renderer.cpp  renderer.h  renderer.hpp  structs.h  uniform_buffer_object.hpp  vulkan_context.cpp  vulkan_context.h  vulkan_device_context.cpp  vulkan_device_context.h  vulkan_device_context.hpp  vulkan_swapchain_context.cpp  vulkan_swapchain_context.h  vulkan_swapchain_context.hpp
src/core/rendering/vulkan/objects/: material.hpp  mesh.hpp  model.hpp
src/core/resource_managment/: resource_manager.cpp  resource_manager.h  resource_manager.hpp
src/core/resource_managment/objects/: ae_object.h  texture_resource.hpp
src/core/resources/: resource_manager.cpp  resource_manager.h
src/core/window_managment/: window_context.cpp  window_context.h  window_context.hpp
